fix - improves whitespace

--- a/styles/CV.module.scss
+++ b/styles/CV.module.scss
@@ -110,18 +110,18 @@
 }
 
 .content {
-  padding: var(--padding);
+  padding: 0 var(--padding);
 
   .section-container {
     color: var(--clr-primary-400);
-    padding: var(--padding);
+    padding: 1rem var(--padding);
     display: flex;
     flex-direction: column;
 
     & .section-title {
       display: flex;
       gap: 0.5rem;
-      padding: var(--padding) 0;
+      padding: 1rem 0;
       vertical-align: middle;
 
       .icon {
@@ -167,7 +167,7 @@
     grid-template-columns: minmax(150px, 30%) 2px 1fr;
     grid-template-rows: 1.5rem 1fr;
 
-    padding: 1rem 0;
+    padding: 0.75rem 0;
 
     gap: 0.5rem 2rem;
     margin: 0;
